# serde-java-properties

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: lib.rs
src/de/: field.rs  mod.rs
src/ser/: mod.rs  string.rs
