[package]
name = "serde-java-properties"
version = "0.1.0"
edition = "2021"
description = "Serde support for `java-properties`"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Xiphoseer/serde-java-properties"

[dependencies]
serde = "1"
java-properties = "1.4"
encoding = "0.2.33"

[dev-dependencies.serde]
version = "*"
features = ["derive"]
