[package]
name = "serde-java-properties"
version = "0.2.0"
edition = "2021"
description = "Serde support for `java-properties`"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Xiphoseer/serde-java-properties"

[dependencies]
serde = "1"
java-properties = "2.0.0"
encoding_rs = "0.8.34"

[dev-dependencies.serde]
version = "1"
features = ["derive"]
